# Eruption

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/Source/Editor/: EditorLayer.cpp  EditorLayer.h  main.cpp
Eruption/: CMakeLists.txt
Eruption-Core/: CMakeLists.txt
Eruption-Core/Source/: main.cpp
Eruption-Core/Source/Shaders/: shader.frag  shader.vert
Eruption/Source/: erpch.h
Eruption/Source/Eruption/: EntryPoint.h
Eruption/Source/Eruption/Core/: Application.cpp  Application.h  Assert.h  Base.h  DeltaTime.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timer.h  Window.cpp  Window.h
Eruption/Source/Eruption/Core/Events/: ApplicationEvent.h  Event.h  EventBus.h  KeyEvent.h  MouseEvent.h
Eruption/Source/Eruption/Platform/Vulkan/: VmaImplementation.cpp  Vulkan.cpp  Vulkan.h  VulkanAllocator.cpp  VulkanAllocator.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Eruption/Source/Eruption/Renderer/: Renderer.cpp  Renderer.h  RendererAPI.h  RendererConfig.h  RendererContext.cpp  RendererContext.h
